# driftguard

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  server.py  vercel.json
driftguard/: __init__.py  config.py  middleware.py  models.py  sdk.py  server.py
driftguard/api/: __init__.py  chatbot.py  dashboard.py
driftguard/detectors/: __init__.py  base.py  drift.py  injection.py  trust.py
driftguard/pipeline/: __init__.py  queue.py  worker.py
driftguard/storage/: __init__.py  db.py
examples/: .gitignore  anthropic_example.py  openai_example.py
tests/: conftest.py  test_chatbot.py  test_dashboard.py  test_deployment.py  test_drift.py  test_injection.py  test_sdk.py
